<resources>
    <string name="app_name">SimpleTodoList</string>
    <string name="app_header">Simple Todo List</string>
    <string name="enter_task_hint">Enter task name</string>
    <string name="calendar_desc">Select date</string>
    <string name="add_text">Add</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete"</string>

    <string name="today_task">Today\'s Tasks</string>
    <string name="future_task">Future Tasks</string>

    <string name="edit_header">Edit Task</string>
    <string name="task_name_text">Task Name</string>
    <string name="task_date_text">Task Date</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>

    <string name="empty_state_title">No tasks created</string>
    <string name="empty_state_subtitle">Add a new task to get started</string>
</resources>